--- a/travel/index.html
+++ b/travel/index.html
@@ -11,10 +11,17 @@
     <div class="pop-up hidden">
         <div class="pop-up_content">
             <p class="pop-up_name">Log in to your account</p>
-            <p class="pop-up_name">Log in to your account</p>
-            <p class="pop-up_name">Log in to your account</p>
-            <p class="pop-up_name">Log in to your account</p>
-            <p class="pop-up_name">Log in to your account</p>
+            <div>
+                <button class="facebook_button"><span class="ico ico_facebook"></span>Sign In with Facebook</button>
+            </div>
+            <div>
+                <button class="google_button"><span class="ico ico_google"></span>Sign In with Google</button>
+            </div>
+            <div class="OR_popup">
+                <div><img src="../travel/images/Line 1.jpg" alt="line"></div>
+                <p class="OR_text">or</p>
+                <div><img src="../travel/images/Line 2.jpg" alt="line"></div>
+            </div>
         </div>
     </div>
 <div class="backgraund_header_preview">
