--- a/travel/index.html
+++ b/travel/index.html
@@ -11,16 +11,33 @@
     <div class="pop-up hidden">
         <div class="pop-up_content">
             <p class="pop-up_name">Log in to your account</p>
-            <div>
+            <div class="button_facebook">
                 <button class="facebook_button"><span class="ico ico_facebook"></span>Sign In with Facebook</button>
             </div>
-            <div>
+            <div class="button_google">
                 <button class="google_button"><span class="ico ico_google"></span>Sign In with Google</button>
             </div>
             <div class="OR_popup">
-                <div><img src="../travel/images/Line 1.jpg" alt="line"></div>
+                <div class="line1"><img src="../travel/images/Line 1.jpg" alt="line"></div>
                 <p class="OR_text">or</p>
-                <div><img src="../travel/images/Line 2.jpg" alt="line"></div>
+                <div class="line2"><img src="../travel/images/Line 2.jpg" alt="line"></div>
+            </div>
+            <div class="popup_email">
+                <p class="email">E-mail</p>
+                <input type="text" class="email_input">
+            </div>
+            <div class="popup_pass">
+                <p class="pass">Password</p>
+                <input type="password" class="pass_input">
+            </div>
+            <div class="button_signin">
+                <button class="signin_button">Sign In</button>
+            </div>
+            <p class="forgotpass">Forgot Your Password?</p>
+            <div class="line3"><img src="../travel/images/Line 1.jpg" alt="line"><img src="../travel/images/Line 2.jpg" alt="line"></div>
+            <div class="accreg">
+                <p class="account">Don’t have an account?</p>
+                <p class="reg">Register</p>
             </div>
         </div>
     </div>
