--- a/travel/index.html
+++ b/travel/index.html
@@ -11,6 +11,7 @@
     <div class="pop-up hidden">
         <div class="pop-up_content">
             <p class="pop-up_name">Log in to your account</p>
+            <p class="pop-up_name2">Create account</p>
             <div class="button_facebook">
                 <button class="facebook_button"><span class="ico ico_facebook"></span>Sign In with Facebook</button>
             </div>
