--- a/travel/index.html
+++ b/travel/index.html
@@ -10,18 +10,18 @@
 <body>
     <div class="pop-up hidden">
         <div class="pop-up_content">
-            <p class="pop-up_name">Log in to your account</p>
-            <p class="pop-up_name2">Create account</p>
-            <div class="button_facebook">
+            <p class="pop-up_name tooglenone">Log in to your account</p>
+            <p class="pop-up_name2 toogleblock">Create account</p>
+            <div class="button_facebook tooglenone">
                 <button class="facebook_button"><span class="ico ico_facebook"></span>Sign In with Facebook</button>
             </div>
-            <div class="button_google">
+            <div class="button_google tooglenone">
                 <button class="google_button"><span class="ico ico_google"></span>Sign In with Google</button>
             </div>
-            <div class="OR_popup">
-                <div class="line1"><img src="../travel/images/Line 1.jpg" alt="line"></div>
+            <div class="OR_popup tooglenone">
+                <div class="line1"><img class="line1_img" src="../travel/images/Line 1.jpg" alt="line"></div>
                 <p class="OR_text">or</p>
-                <div class="line2"><img src="../travel/images/Line 2.jpg" alt="line"></div>
+                <div class="line2"><img class="line2_img" src="../travel/images/Line 2.jpg" alt="line"></div>
             </div>
             <div class="popup_email">
                 <p class="email">E-mail</p>
@@ -32,12 +32,14 @@
                 <input type="password" class="pass_input">
             </div>
             <div class="button_signin">
-                <button class="signin_button">Sign In</button>
+                <button class="signin_button tooglenone">Sign In</button>
+                <button class="signup_button toogleblock">Sign Up</button>
             </div>
-            <p class="forgotpass">Forgot Your Password?</p>
-            <div class="line3"><img src="../travel/images/Line 1.jpg" alt="line"><img src="../travel/images/Line 2.jpg" alt="line"></div>
+            <p class="forgotpass tooglenone">Forgot Your Password?</p>
+            <div class="line3"><img class="line3_img1" src="../travel/images/Line 1.jpg" alt="line"><img class="line3_img2" src="../travel/images/Line 2.jpg" alt="line"></div>
             <div class="accreg">
-                <p class="account">Don’t have an account?</p>
+                <p class="account tooglenone">Don’t have an account?</p>
+                <p class="account2 toogleblock">Already have an account?</p>
                 <p class="reg">Register</p>
             </div>
         </div>
