--- a/travel/index.html
+++ b/travel/index.html
@@ -123,13 +123,13 @@
                 <div class="destination">
                     <div class="destination1">
                         <div class="destination_img">
-                            <img src="../travel/images/Rectangle 23.jpg" alt="SPAIN">
+                            <img class="left" src="../travel/images/Rectangle 23.jpg" alt="SPAIN">
                             <p class="destination_text">SPAIN</p>
                         </div>
                     </div>
                     <div class="destination2">
                         <div class="destination_img">
-                            <img src="../travel/images/Rectangle 24.jpg" alt="JAPAN">
+                            <img  src="../travel/images/Rectangle 24.jpg" alt="JAPAN">
                             <p class="destination_text">JAPAN</p>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="destination3">
                         <div class="destination_img">
-                            <img src="../travel/images/Rectangle 25.jpg" alt="USA">
+                            <img class="right" src="../travel/images/Rectangle 25.jpg" alt="USA">
                             <p class="destination_text">USA</p>
                         </div>
                     </div>
