--- a/travel/index.html
+++ b/travel/index.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="destination">
                     <div class="destination1">
-                        <div class="destination_img">
+                        <div class="destination_img image1">
                             <img class="left" src="../travel/images/Rectangle 23.jpg" alt="SPAIN">
                             <p class="destination_text">SPAIN</p>
                         </div>
