--- a/travel/index.html
+++ b/travel/index.html
@@ -120,11 +120,24 @@
                 <div class="destinations_name">
                     <h2><a name="dest"></a>POPULAR DESTINATIONS</h2>
                 </div>
+                <span class="ico ico_arrl"><svg width="15" height="26" viewBox="0 0 15 26" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.0757 24.9325C14.4272 24.5809 14.6246 24.1041 14.6246 23.6069C14.6246 23.1097 14.4272 22.6329 14.0757 22.2813L4.7944 13L14.0757 3.71875C14.4172 3.36512 14.6062 2.89149 14.6019 2.39987C14.5976 1.90825 14.4005 1.43798 14.0528 1.09034C13.7052 0.742699 13.2349 0.545507 12.7433 0.541237C12.2517 0.536964 11.778 0.725954 11.4244 1.0675L0.817529 11.6744C0.466021 12.026 0.268555 12.5028 0.268555 13C0.268555 13.4972 0.466021 13.974 0.817529 14.3256L11.4244 24.9325C11.776 25.284 12.2528 25.4815 12.75 25.4815C13.2472 25.4815 13.724 25.284 14.0757 24.9325Z" fill="#F2785C"/>
+                    </svg></span>
+                    <span class="ico ico_arr"><svg width="15" height="26" viewBox="0 0 15 26"  xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.924346 1.0675C0.572838 1.41911 0.375371 1.89594 0.375371 2.39312C0.375371 2.89031 0.572838 3.36713 0.924346 3.71875L10.2056 13L0.924346 22.2812C0.5828 22.6349 0.39381 23.1085 0.398083 23.6001C0.402354 24.0917 0.599545 24.562 0.947186 24.9097C1.29483 25.2573 1.7651 25.4545 2.25672 25.4588C2.74834 25.463 3.22197 25.274 3.57559 24.9325L14.1825 14.3256C14.534 13.974 14.7314 13.4972 14.7314 13C14.7314 12.5028 14.534 12.026 14.1825 11.6744L3.57559 1.0675C3.22398 0.715991 2.74715 0.518524 2.24997 0.518524C1.75279 0.518524 1.27596 0.715991 0.924346 1.0675Z" fill="#F2785C"/>
+                        </svg></span>
                 <div class="destination">
                     <div class="destination1">
-                        <div class="destination_img image1">
-                            <img class="left" src="../travel/images/Rectangle 23.jpg" alt="SPAIN">
+                        <div class="destination_img">
+                            <img src="../travel/images/Rectangle 23.jpg" alt="SPAIN">
                             <p class="destination_text">SPAIN</p>
+                        </div>
+                    </div>
+                    <div class="destination1S">
+                        <div class="destinationS_img">
+                               
+                            <img src="../travel/images/Rectangle 23S.jpg" alt="SPAIN">
+                            <p class="destinationS_text">SPAIN</p>    
                         </div>
                     </div>
                     <div class="destination2">
@@ -135,27 +148,31 @@
                     </div>
                     <div class="destination2S">
                         <div class="destinationS_img">
-                                <span class="ico ico_arrl"><svg width="15" height="26" viewBox="0 0 15 26" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M14.0757 24.9325C14.4272 24.5809 14.6246 24.1041 14.6246 23.6069C14.6246 23.1097 14.4272 22.6329 14.0757 22.2813L4.7944 13L14.0757 3.71875C14.4172 3.36512 14.6062 2.89149 14.6019 2.39987C14.5976 1.90825 14.4005 1.43798 14.0528 1.09034C13.7052 0.742699 13.2349 0.545507 12.7433 0.541237C12.2517 0.536964 11.778 0.725954 11.4244 1.0675L0.817529 11.6744C0.466021 12.026 0.268555 12.5028 0.268555 13C0.268555 13.4972 0.466021 13.974 0.817529 14.3256L11.4244 24.9325C11.776 25.284 12.2528 25.4815 12.75 25.4815C13.2472 25.4815 13.724 25.284 14.0757 24.9325Z" fill="#F2785C"/>
-                                    </svg></span>
-                            <img src="../travel/images/Rectangle 23S.jpg" alt="SPAIN">
-                            <p class="destinationS_text">SPAIN</p>
-                                <span class="ico ico_arr"><svg width="15" height="26" viewBox="0 0 15 26"  xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M0.924346 1.0675C0.572838 1.41911 0.375371 1.89594 0.375371 2.39312C0.375371 2.89031 0.572838 3.36713 0.924346 3.71875L10.2056 13L0.924346 22.2812C0.5828 22.6349 0.39381 23.1085 0.398083 23.6001C0.402354 24.0917 0.599545 24.562 0.947186 24.9097C1.29483 25.2573 1.7651 25.4545 2.25672 25.4588C2.74834 25.463 3.22197 25.274 3.57559 24.9325L14.1825 14.3256C14.534 13.974 14.7314 13.4972 14.7314 13C14.7314 12.5028 14.534 12.026 14.1825 11.6744L3.57559 1.0675C3.22398 0.715991 2.74715 0.518524 2.24997 0.518524C1.75279 0.518524 1.27596 0.715991 0.924346 1.0675Z" fill="#F2785C"/>
-                                    </svg></span>
+                            <img style="border-radius: 16px;" src="../travel/images/Rectangle 34S.jpg" alt="JAPAN">
+                            <p class="destinationS_text">JAPAN</p>
+
                         </div>
                     </div>
                     <div class="destination3">
                         <div class="destination_img">
-                            <img class="right" src="../travel/images/Rectangle 25.jpg" alt="USA">
+                            <img src="../travel/images/Rectangle 25.jpg" alt="USA">
                             <p class="destination_text">USA</p>
                         </div>
                     </div>
+                    <div class="destination3S">
+                        <div class="destinationS_img">
+
+                            <img style="border-radius: 16px;" src="../travel/images/Rectangle 35S.jpg" alt="USA">
+                            <p class="destinationS_text">USA</p>
+                        </div>
+                    </div>
+                    <div class="left"></div>
+                    <div class="right"></div>
                 </div>
-                <div class="ellipse">
-                    <span class="ellipse1"></span>
-                    <span class="ellipse2"></span>
-                    <span class="ellipse3"></span>
+                <div class="ellipses">
+                    <span class="ellipse activem"></span>
+                    <span class="ellipse active"></span>
+                    <span class="ellipse"></span>
                 </div>
                 <div class="destination_button">
                     <button class="button button_dist"><img class="buttondist_img" src="../travel/images/arrow.svg" alt="butdistim"><img class="buttondistS_img" src="../travel/images/arrS.svg" alt="butdistim">Find More</button>
